# ai-voice-bot-challenge

./: .env.example  .gitignore  ARCHITECTURE.md  BUG_REPORT.md  CALL_EVALUATION.md  CALL_EVIDENCE.md  CALL_QA.md  CALL_SELECTION.md  ITERATION_LOG.md  README.md  SCENARIOS.md  SUBMISSION.md  pyproject.toml
artifacts/: BUG_REPORT.md
src/voicebot/: __init__.py  analyzer.py  artifacts.py  bridge.py  cli.py  config.py  diagnostics.py  evaluator.py  prompts.py  realtime.py  scenarios.py  server.py  twilio_client.py  twiml.py
submission/: BUG_REPORT.md
submission/transcripts/: 10ca193260-CAc15216eab51087b1bb58a2e0e637421b.txt  26a95f83ee-CA210d89aef1c04c89ed68c2fff462f722.txt  2d3be69cb3-CAbd00a506df9f213e1d0a32ee7705fbf1.txt  64e1556ea2-CAba00da4332fb5d9d47cacee1c574bcfe.txt  691aba52fd-CAfc8748452f163fbd7ec64824763e0575.txt  80d29fc0c6-CAe6dcf3c9558beea5cf4d7c1758c3a1b9.txt  8ab7a69965-CA8f4f5c85e9fb5e018bf93e314b4816f5.txt  c62b8aa717-CAd7f972a2c05ded5909cd2f707382970b.txt  call-01-appointment-simple.txt  call-02-reschedule-existing.txt  call-03-cancel-appointment.txt  call-04-weekend-hours.txt  call-05-medication-refill.txt  call-06-insurance-question.txt  call-07-office-logistics.txt  call-08-urgent-boundary.txt  call-09-demographic-correction.txt  call-09-forgot-phone-verification.txt  call-10-human-handoff.txt  call-11-controlled-refill-boundary.txt  call-12-ambiguous-request.txt  (+20 more)
tests/: test_artifacts.py  test_bridge.py  test_config.py  test_diagnostics.py  test_evaluator.py  test_prompts.py  test_realtime.py  test_scenarios.py  test_server.py  test_twiml.py
(+3 files in other folders)
