[project]
name = "athena-voicebot"
version = "0.1.0"
description = "Automated patient voice bot for the Pretty Good AI Athena assessment."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "httpx>=0.27.0",
  "openai>=1.60.0",
  "python-multipart>=0.0.9",
  "python-dotenv>=1.0.1",
  "rich>=13.7.0",
  "twilio>=9.0.0",
  "typer>=0.12.3",
  "uvicorn[standard]>=0.30.0",
  "websockets>=12.0",
]

[project.scripts]
voicebot = "voicebot.cli:app"

[dependency-groups]
dev = [
  "pytest>=8.2.0",
  "pytest-asyncio>=0.23.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/voicebot"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
